# L1-Skeleton

./: Point Cloud.sln  README.md
Point Cloud/: .gitignore  CMakeLists.txt  CMesh.h  Console.cpp  DataMgr.cpp  DataMgr.h  GLArea.cpp  GLArea.h  GLDrawer.cpp  GLDrawer.h  GlobalFunction.cpp  GlobalFunction.h  Parameter.h  ParameterMgr.cpp  ParameterMgr.h  Point Cloud.vcxproj  Point Cloud.vcxproj.filters  WLOP.cpp  WLOP.h  calculationthread.h  grid.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Point Cloud/Algorithm/: PointCloudAlgorithm.h  Skeleton.h  Skeletonization.cpp  Upsampler.cpp  anistropicPCA_Normal.h  normal_extrapolation.h
Point Cloud/IncludeLib/ann_1.1.2/: ANNConfig.cmake
Point Cloud/IncludeLib/glut/: GLUTSConfig.cmake
Point Cloud/IncludeLib/glut64/: GLUTSConfig.cmake
Point Cloud/IncludeLib/vcglib/: VCGConfig.cmake
Point Cloud/UI/: dlg_normal_para.cpp  dlg_normal_para.h  dlg_skeleton_para.cpp  dlg_skeleton_para.h  dlg_upsampling_para.h  dlg_wlop_para.h  std_para_dlg.cpp  std_para_dlg.h
Point Cloud/depends/ANN/linux/: ANN_1.1.2_GCC_4.9.3.7z  ANN_1.1.2_GCC_5.4.7z
Point Cloud/depends/ANN/windows/: ANN_1.1.2_vs2010.7z
Point Cloud/depends/ANN/windows/ANN_1.1.2_vs2010/bin64/: ANN-md-dg.ilk  ANN-mt-dg.ilk
Point Cloud/depends/ANN/windows/ANN_1.1.2_vs2010/lib/x64/: ANN-md-dg.lib  ANN-md.lib  ANN-mt-dg.lib  ANN-mt.lib
Point Cloud/depends/ANN/windows/ANN_1.1.2_vs2010/lib/x86/: ANN-md-dg.lib  ANN-md.lib  ANN-mt-dg.lib  ANN-mt.lib
Point Cloud/depends/ANN/windows/ANN_1.1.2_vs2013/: ANNConfig.cmake
Point Cloud/depends/ANN/windows/ANN_1.1.2_vs2013/bin64/: ANN-md-dg.ilk
Point Cloud/depends/ANN/windows/ANN_1.1.2_vs2013/lib/x64/: ANN-md-dg.lib  ANN-md.lib  ANN-mt-dg.lib  ANN-mt.lib
Point Cloud/depends/ANN/windows/ANN_1.1.2_vs2013/lib/x86/: ANN-md-dg.lib  ANN-md.lib  ANN-mt-dg.lib  ANN-mt.lib
Point Cloud/depends/GLEW/windows/: glew-2.0.0.7z
Point Cloud/depends/GLEW/windows/Config-Cmake/: GLEWConfig.cmake
Point Cloud/depends/GLUT/windows/: glut-3.6-vs2010x64.7z  glut-3.6-vs2010x86.7z  glut-3.6-vs2013x64.7z  glut-3.6-vs2013x86.7z
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x64/: README.xinput  glutdefs
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x64/lib/: gle.lib  glut32.lib  mui.lib
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x64/progs/: Imakefile  Makefile.sgi
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x64/progs/advanced/: Imakefile  Makefile  Makefile.sgi  hello2rts.c  tess.c  textrim.c  vox.c
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x64/progs/demos/: Makefile  Makefile.sgi
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x64/progs/examples/: editgrid.c  glpuzzle.c  glutplane.c  highlight.c  ohidden.c  surfgrid.c  texenv.c  trippy.c
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x86/: FAQ.glut  Glut.cf  README.fortran
Point Cloud/depends/GLUT/windows/glut-3.6-vs2010x86/lib/: gle.lib  glut32.lib  mui.lib
Point Cloud/depends/GLUT/windows/glut-3.6-vs2013x64/lib/: gle.lib  glut32.lib  mui.lib
Point Cloud/depends/GLUT/windows/glut-3.6-vs2013x86/: CHANGES  Portability.txt  README
Point Cloud/depends/GLUT/windows/glut-3.6-vs2013x86/lib/: gle.lib  glut32.lib  mui.lib
Point Cloud/depends/GLUT/windows/glut-3.6-vs2013x86/progs/: Makefile
Point Cloud/depends/VCG/Windows/Cmake/: leeme.txt
Point Cloud/depends/VCG/linux/Cmake/: leeme.txt
(+116 files in other folders)
